--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "webapp",
+  "name": "scholarix-study-abroad-v0",
   "compatibility_date": "2025-09-27",
   "pages_build_output_dir": "./dist",
   "compatibility_flags": [
