✨ World-Class Website: 3D Globe, GSAP Animations, Particles.js, Glassmorphism & Perfect Responsiveness

--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "git:log": "git log --oneline"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "googleapis": "^160.0.0",
+    "gsap": "^3.13.0",
     "hono": "^4.9.9",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "particles.js": "^2.0.0",
+    "swiper": "^12.0.2",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@hono/vite-build": "^1.2.0",
